--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     container_name: global_journey_fe
     restart: always
     networks:
-      - my_existing_network
+      - my_bridge_network
     depends_on:
       - backend
 
@@ -19,13 +19,15 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    env_file: 
+      - backend/.env
     ports:
       - "5000:5000"
     container_name: global_journey_backend
     restart: always
     networks:
-      - my_existing_network
+      - my_bridge_network
 
 networks:
-  my_existing_network:
+  my_bridge_network:
     external: true
